--- a/HTML CSS/src/introductionhtml/index.html
+++ b/HTML CSS/src/introductionhtml/index.html
@@ -17,9 +17,23 @@
     </ul>
 </nav>
 
-<header>
-    
-</header>
+<section>
+    <h1>Articles</h1>
+    <article>
+        <header>
+            <h3>Just another day</h3>
+            <p>Written by…</p>
+        </header>
+        <p>This is my second blog…</p>
+    </article>
+    <article>
+       <header>
+           <h3>My First Blog Entry</h3>
+           <p>Written by Christina on January 10th</p>
+       </header>
+        <p>I'm so happy to write my first blog entry - yay! I published my first article about business blogging in August, 2001. You can read it here. Whew. A lot of water under the bridge since then, including 9/11, which happened only a few weeks later.</p>
+    </article>
+</section>
 
 </body>
 </html>
