--- a/HTML CSS/src/introductionhtml/index.html
+++ b/HTML CSS/src/introductionhtml/index.html
@@ -22,10 +22,12 @@
     <article>
         <header>
             <h3>Just another day</h3>
+            <img src="https://www.freegreatpicture.com/files/photo107/53470-winter-beautiful-snow-crystal.jpg" width="500px">
             <p>Written by…</p>
         </header>
         <p>This is my second blog…</p>
     </article>
+
     <article>
        <header>
            <h3>My First Blog Entry</h3>
@@ -34,6 +36,39 @@
         <p>I'm so happy to write my first blog entry - yay! I published my first article about business blogging in August, 2001. You can read it here. Whew. A lot of water under the bridge since then, including 9/11, which happened only a few weeks later.</p>
     </article>
 </section>
+
+<table>
+    <thead>
+    <tr><th colspan="4">Web Fundamentals</th></tr>
+    </thead>
+
+    <tbody>
+    <tr>
+        <td class="bold">&#8470;</td>
+        <td class="1">First Name</td>
+        <td class="2">Last Name</td>
+        <td class="3">Score</td>
+    </tr>
+    <!-- TODO: put the rest <tr> with <td> here … -->
+    <tr>
+        <td class="numbers">01</td>
+        <td class="1">Aleks</td>
+        <td class="2">Petkov</td>
+        <td class="3">6.00/6.00</td>
+    </tr>
+
+    <tr>
+        <td class="numbers">02</td>
+        <td class="1">Gosho</td>
+        <td class="2">Goshev</td>
+        <td class="3">5.00/5.00</td>
+    </tr>
+    </tbody>
+    
+    <tfoot>
+    <tr><td colspan="4" class="result">Avarage : 5.50</td></tr>
+    </tfoot>
+</table>
 
 </body>
 </html>
