--- a/HTML CSS/src/introductioncss/fitness.html
+++ b/HTML CSS/src/introductioncss/fitness.html
@@ -28,7 +28,7 @@
 <main>
     <section>
         <h1>DISCOVER THE HIDDEN <span>ALTER EGO</span> OF YOUR BODY</h1>
-        <button>READ MORE</button>
+        <button class="but">READ MORE</button>
     </section>
 
     <section>
@@ -43,7 +43,7 @@
         </article>
 
         <article>
-            <h3>MEMBERSHIPS</h3>\
+            <h3>MEMBERSHIPS</h3>
             <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</p>
         </article>
     </section>
